# cpp-encrypted-chat

./: CMakeLists.txt  README.md
include/: handle_crypto.hpp  network.hpp
src/: handle_crypto.cpp  main.cpp  network.cpp
